--- a/_includes/_google-analytics.html
+++ b/_includes/_google-analytics.html
@@ -1,1 +1,11 @@
 <!--google analytics tracking code here-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137830513-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137830513-1');
+</script>
+
